fixed for left aligning

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,6 @@ h1 {
 .empty {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -101,6 +100,7 @@ h1 {
 }
 
 .empty h2 {
+  text-align: center;
   font-size: 1.25rem;
   color: #f9d3b4;
   font-family: var(--font-raleway);
